update rwd, add class - scss

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,69 @@
   <title>Recruitment task</title>
 </head>
 <body>
+
+  <!-- first row -->
+  <div class="container container--top">
+
+    <div class="altcoins">
+      <p class="altcoins__text">Altcoins</p>
+    </div>
+
+    <div class="ethereum">
+      <p class="ethereum__title">Ethereum Classic combined with Zcash</p>
+      <div class="line">
+        <img class="line__img" src="img/parasol.png" alt="">
+        <p class="line__text">Ethereum foundation</p>
+      </div>
+      <div class="line line--hide">
+        <div class="line__dot"></div>
+        <p class="line__text">Altcoins - highest growth</p>
+      </div>
+    </div>
+
+    <div class="cells">
+      <div class="cell main-cell">
+        <p class="cell__number cell__number--active">2 200<span class="cell__text">PLN</span></p>
+        <p class="cell__text">Wartość</p>
+      </div>
+      <div class="cell">
+        <p class="cell__number">+0,91%</p>
+        <p class="cell__text">1D</p>
+      </div>
+      <div class="cell">
+        <p class="cell__number">-0,21%</p>
+        <p class="cell__text">1M</p>
+      </div>
+      <div class="cell cell--hide">
+        <p class="cell__number">-2,29%</p>
+        <p class="cell__text">3M</p>
+      </div>
+      <div class="cell cell--hide">
+        <p class="cell__number">+0,42%</p>
+        <p class="cell__text">12M</p>
+      </div>
+      <div class="cell cell--hide">
+        <p class="cell__number">+0,85%</p>
+        <p class="cell__text">30M</p>
+      </div>
+      <div class="cell cell--last cell--hide">
+        <p class="cell__number">+1,31%</p>
+        <p class="cell__text">YTD</p>
+      </div>
+    </div>
+
+    <div class="action">
+      <button class="btn">Inwestuj</button>
+      <div class="icons">
+        <div class="action__icon icons__eye"></div>
+        <div class="action__icon icons__balance"></div>
+      </div>
+    </div>
+    
+  </div>
+
+<!-- second row -->
+
   <div class="container">
 
     <div class="altcoins">
